PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Allow FORCE_TIMES_TO_RUN to override debug-run/debug-benchmark single run behavior
pts-core: Various fallbacks/workarounds for those wanting to (unofficially) use PTS on Windows 8.1
pts-core: Other small tweaks and optimizations
pts-core: Fixes an odd scenario where on Windows after 2 runs, further runs of that test profile for current run could fail in select (random) instances
pts-core: Write out system notes for each system when generating PDF result output
pts-core: CSV output improvements
pts-core: Add result-file-raw-to-csv for dumping the raw/individual benchmark result run data
pts_Graph: Condensing improvements for large graphs
pts_Graph: Various formatting improvements
phodevi: Intel GPU reporting improvements
phodevi: BIOS version reporting support extended to Windows
phodevi: ipmitool DMCI power sensor reporting for at least some POWER servers

Phoronix Test Suite 8.6.1-Spydeberg
21 February 2019

pts-core: Dynamically honoring the CLI terminal width (no longer cache the value on Linux/BSD/macOS)
pts-core: BSD external dependency updates
ob_auto_compare: Minor formatting updates

Phoronix Test Suite 8.6.0-Spydeberg
5 February 2019

pts-core: Other small tweaks and fixes
pts-core: Fix for "/installed" virtual suite not including the proprietary/commercial tests that are installed
ob_auto_compare: Allow showing more results in the embedded percentile graphs

Phoronix Test Suite 8.6.0 Milestone 3
27 January 2019

pts-core: Better handling on Windows when there are space(s) in the paths
pts-core: Add __event_post_run_stats module hook
pts-core: Inline display of result distributions from OpenBenchmarking.org on applicable results
pts-core: Don't try to run tests from result file(s) or suite(s) that were not installed
pts-core: More accurate time reporting when result files are passed to `phoronix-test-suite estimate-run-time`
phodevi: Better reporting of NVMe drive strings on BSDs
