@@ -262,10 +262,10 @@ function pts_version_codenames()
 		);
 }
 
-pts_define('PTS_VERSION', '8.6.1');
-pts_define('PTS_CORE_VERSION', 8610);
-pts_define('PTS_RELEASE_DATE', '20190221');
-pts_define('PTS_CODENAME', 'Spydeberg');
+pts_define('PTS_VERSION', '8.8.0m1');
+pts_define('PTS_CORE_VERSION', 8710);
+pts_define('PTS_RELEASE_DATE', '20190316');
+pts_define('PTS_CODENAME', 'Hvaler');
 
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && strstr(PTS_MODE, 'CLIENT') !== false));
 pts_define('PTS_IS_WEB_CLIENT', (defined('PTS_MODE') && PTS_MODE == 'WEB_CLIENT'));
